# StoppingMuonSelection

./: ._CMakeLists.txt  .gitignore  CMakeLists.txt  CNNHelper.cxx  CNNHelper.h  CalibrationHelper.cxx  CalibrationHelper.h  CalibrationStudy.h  CalibrationStudy_module.cc  CalorimetryHelper.cxx  CalorimetryHelper.h  CosmicStudy.h  CosmicStudy_module.cc  DataTypes.h  FixCalo.h  GeometryHelper.cxx  GeometryHelper.h  HitAlg.cxx  HitAlg.h  HitHelper.cxx  HitHelper.h  HitPlaneAlg.cxx  HitPlaneAlg.h  MichelHelper.cxx  MichelHelper.h  MichelStudyTmp.h  MichelStudyTmp_module.cc  MichelStudy_module.cc  ModBoxModStudyMC.h  ModBoxModStudyMCAnode.h  ModBoxModStudyMCAnode_module.cc  ModBoxModStudyMC_module.cc  PrintLifetime_module.cc  README.md  SceHelper.cxx  SceHelper.h  SelectionStudyProd4.h  SelectionStudyProd4_module.cc  SpacePointAlg.cxx  SpacePointAlg.h  (+9 more)
CutCheck/: CMakeLists.txt  CutCheck.h  CutCheckHelper.cxx  CutCheckHelper.h  CutCheck_module.cc
CutCheck/job/: cutCheckProd2_1GeV_SCEoff.xml  cutCheckProd2_1GeV_SCEon.xml  cutCheckProd2_5387.xml  cutCheckProd4_1GeV_SCEon.xml  cutCheckProd4_5387.xml  runCutCheck.fcl  runCutCheck_Anode.fcl  runCutCheck_Cathode.fcl  runCutCheck_CathodeSimple.fcl  runCutCheck_Cathode_data.fcl  runCutCheck_data_Anode.fcl  runCutCheck_data_Cathode.fcl  runCutCheck_data_CathodeSimple.fcl
job/: caloHelper.fcl  expand.txt  expandservices.txt  hitHelper.fcl  listSCE.txt  michelstudytmp.fcl  runCalibrationStudyProd2_Cathode.fcl  runCalibrationStudyProd2_Cathode_data.fcl  runCosmicStudy.fcl  runMichelStudy.fcl  runMichelStudyProd2.fcl  runMichelStudyProd2_Anode.fcl  runMichelStudyProd2_Anode_data.fcl  runMichelStudyProd2_Cathode_data.fcl  runModBoxModStudyMCProd4_Anode.fcl  runModBoxModStudyMCProd4_Anode_data.fcl  runModBoxModStudyMCProd4_Anode_strictSP.fcl  runModBoxModStudyMCProd4_Cathode.fcl  runModBoxModStudyMCProd4_Cathode_data.fcl  runPrintLifetime.fcl  runSelectionStudyProd4_Anode.fcl  runSelectionStudyProd4_Anode_data.fcl  runSelectionStudyProd4_Cathode.fcl  spacepointAlg.fcl  stoppingmuonAlg.fcl
job/grid/: PDSPProd2_MC_1GeV_reco_sce_offList.txt  calibrationStudyProd2_1GeV_SCEon.xml  calibrationStudyProd2_5387.xml  file_di_prova.txt  michelHitStudyProd2.xml  michelHitStudyProd2_1GeV_SCEoff.xml  michelHitStudyProd2_1GeV_SCEoff1100.xml  michelHitStudyProd2_1GeV_SCEoffList.xml  michelHitStudyProd2_1GeV_SCEon.xml  michelHitStudyProd2_3GeV_SCEoff.xml  michelHitStudyProd2_5387.xml  michelHitStudyProd2_7GeV_SCEoff.xml  michelHitStudy_3ms.xml  modBoxModStudy_Prod4_1GeV_SCEon.xml  modBoxModStudy_Prod4_r5387.xml  selectionStudyProd4_1GeV_SCEon.xml  selectionStudyProd4_r5387.xml  sub.sh
job/grid/Lists/: PDSPProd2_MC_1GeV_reco_sce_datadrivenList.txt  PDSPProd2_MC_1GeV_reco_sce_offSubList.txt  michelHitStudyProd2_1GeV_SCEoff1100.xml  michelHitStudyProd2_1GeV_SCEonList.xml
job/old/: runCalibrationStudyProd2_Cathode.fcl  runCalibrationStudyProd2_Cathode_data.fcl  runMichelStudyProd2_Cathode_data.fcl
